# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  python-package.yml
brain_games/: engine.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  gmae_calc.py  prime.py  progression.py
brain_games/run/: functions.py  game_runner.py  welcome_user.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
